--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -1,41 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<style>
-canvas {
-    border: 1px solid #d3d3d3;
-    background-color: #f1f1f1;
-}
-</style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <style>
+        canvas {
+            border: 1px solid #d3d3d3;
+            background-color: #f1f1f1;
+        }
+    </style>
 </head>
 <body>
 <script>
 
 var myGamePiece;
 var myObstacles = [];
+var myProjectiles = [];
 var myScore;
 var crashSound;
 var backgroundMusic;
 var backgroundImage;
 var musicStarted = false;
-var gamePaused = false;
 var gameRunning = false;
 var gameOver = false;
 
 function startGame() {
     if (!gameRunning) {
-        // Initialize the game character
         myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/Army%20man.jpeg", 10, 120, "image");
-        myGamePiece.gravity = 0.05;
         myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
-        // Initialize audio effects
         crashSound = new Audio('crash.mp3'); 
         backgroundMusic = new Audio('background.mp3');
         backgroundMusic.loop = true;
 
-        // Load background image
         backgroundImage = new component(myGameArea.canvas.width, myGameArea.canvas.height, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/run down city background.webp", 0, 0, "background");
 
         myGameArea.start();
@@ -45,8 +41,8 @@ function startGame() {
 }
 
 var myGameArea = {
-    canvas : document.createElement("canvas"),
-    start : function() {
+    canvas: document.createElement("canvas"),
+    start: function() {
         this.canvas.width = 480;  // Set game width
         this.canvas.height = 270; // Set game height
         this.context = this.canvas.getContext("2d");
@@ -56,10 +52,10 @@ var myGameArea = {
         window.addEventListener('keydown', moveKey); 
         window.addEventListener('keyup', stopMove); 
     },
-    clear : function() {
+    clear: function() {
         this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
     },
-    stop : function() {
+    stop: function() {
         clearInterval(this.interval); 
     }
 }
@@ -95,20 +91,8 @@ function component(width, height, color, x, y, type) {
     }
 
     this.newPos = function() {
-        if (!gameOver) {
-            this.gravitySpeed += this.gravity;
-            this.x += this.speedX;
-            this.y += this.speedY + this.gravitySpeed;
-            this.hitBottom();
-        }
-    }
-
-    this.hitBottom = function() {
-        var rockbottom = myGameArea.canvas.height - this.height;
-        if (this.y > rockbottom) {
-            this.y = rockbottom;
-            this.gravitySpeed = 0;
-        }
+        this.x += this.speedX;
+        this.y += this.speedY;
     }
 
     this.crashWith = function(otherobj) {
@@ -120,28 +104,20 @@ function component(width, height, color, x, y, type) {
         var otherright = otherobj.x + otherobj.width;
         var othertop = otherobj.y;
         var otherbottom = otherobj.y + otherobj.height;
-        var crash = true;
-        if ((mybottom < othertop) || (mytop > otherbottom) || (myright < otherleft) || (myleft > otherright)) {
-            crash = false;
-        }
-        return crash;
+        return !((mybottom < othertop) || (mytop > otherbottom) || (myright < otherleft) || (myleft > otherright));
     }
 }
 
 function updateGameArea() {
-    var x, height, gap, minHeight, maxHeight, minGap, maxGap;
-
     if (!gameOver) {
-        // Clear the game area
         myGameArea.clear();
 
-        // Update background
         backgroundImage.width = myGameArea.canvas.width;
         backgroundImage.height = myGameArea.canvas.height;
         backgroundImage.update();
 
-        // Check for crashes
-        for (i = 0; i < myObstacles.length; i += 1) {
+        // Check for crashes with obstacles
+        for (var i = 0; i < myObstacles.length; i++) {
             if (myGamePiece.crashWith(myObstacles[i])) {
                 crashSound.play();
                 gameOver = true;
@@ -151,43 +127,50 @@ function updateGameArea() {
         }
 
         // Generate new obstacles every 150 frames
-        if (!gameOver) {
-            myGameArea.frameNo += 1;
+        myGameArea.frameNo += 1;
 
-            if (myGameArea.frameNo == 1 || everyinterval(150)) {
-                x = myGameArea.canvas.width;
-                minHeight = 50;  // Adjusted to ensure visibility
-                maxHeight = 150; // Adjusted max height for obstacles
-                height = Math.floor(Math.random() * (maxHeight - minHeight + 1) + minHeight);
-                minGap = 50;
-                maxGap = 150;
-                gap = Math.floor(Math.random() * (maxGap - minGap + 1) + minGap);
+        if (myGameArea.frameNo == 1 || everyinterval(150)) {
+            var x = myGameArea.canvas.width;
+            var minHeight = 50;
+            var maxHeight = 150;
+            var height = Math.floor(Math.random() * (maxHeight - minHeight + 1) + minHeight);
+            var minGap = 50;
+            var maxGap = 150;
+            var gap = Math.floor(Math.random() * (maxGap - minGap + 1) + minGap);
 
-                // Adding visible obstacle poles
-                myObstacles.push(new component(10, height, "green", x, 0));  // Top pole
-                myObstacles.push(new component(10, myGameArea.canvas.height - height - gap, "green", x, height + gap));  // Bottom pole
-            }
-
-            // Move obstacles and make them visible
-            for (i = 0; i < myObstacles.length; i += 1) {
-                myObstacles[i].x += -2;  // Make sure obstacles move at a reasonable speed
-                myObstacles[i].update();
-            }
-
-            // Update the position of the game piece (character)
-            myGamePiece.newPos();
+            myObstacles.push(new component(10, height, "green", x, 0));  // Top pole
+            myObstacles.push(new component(10, myGameArea.canvas.height - height - gap, "green", x, height + gap));  // Bottom pole
         }
+
+        // Move obstacles
+        for (var i = 0; i < myObstacles.length; i++) {
+            myObstacles[i].x += -2;  // Make sure obstacles move at a reasonable speed
+            myObstacles[i].update();
+        }
+
+        // Update the position of the game piece (character)
+        myGamePiece.newPos();
+        myGamePiece.update();
+
+        // Update projectiles
+        for (var i = 0; i < myProjectiles.length; i++) {
+            myProjectiles[i].newPos();
+            myProjectiles[i].update();
+        }
+
+        // Remove projectiles that go off screen
+        myProjectiles = myProjectiles.filter(function(projectile) {
+            return projectile.x < myGameArea.canvas.width;
+        });
     }
 
-    // Update the score and game piece
+    // Update the score
     myScore.text = "SCORE: " + myGameArea.frameNo;
     myScore.update();
-    myGamePiece.update();
 }
 
 function everyinterval(n) {
-    if ((myGameArea.frameNo / n) % 1 == 0) { return true; }
-    return false;
+    return (myGameArea.frameNo / n) % 1 === 0;
 }
 
 function moveKey(e) {
@@ -204,6 +187,9 @@ function moveKey(e) {
                 break;
             case 'ArrowRight':
                 myGamePiece.speedX = 2;
+                break;
+            case ' ': // Space bar to shoot
+                shootProjectile();
                 break;
         }
 
@@ -229,13 +215,19 @@ function stopMove(e) {
     }
 }
 
+function shootProjectile() {
+    var projectile = new component(5, 5, "blue", myGamePiece.x + 30, myGamePiece.y + 12, "projectile");
+    projectile.speedX = 5; // Projectile speed
+    myProjectiles.push(projectile); // Add each new projectile to the array
+}
+
 </script>
 
 <!-- Buttons for starting and pausing the game -->
 <button onclick="startGame()">Start Game</button>
 
 <br>
-<p>Use arrow keys to control the character.</p>
+<p>Use arrow keys to control the character and space bar to shoot projectiles.</p>
 
 </body>
 </html>
