--- a/reactchess/chess.html
+++ b/reactchess/chess.html
@@ -33,34 +33,16 @@
       margin-bottom: 15px;
       text-align: center;
     }
-
-    button {
-      padding: 10px 20px;
-      margin: 10px;
-      border: none;
-      background-color: #4CAF50;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-
+    
     .button-container {
+      margin-bottom: 15px;
       text-align: center;
-      margin-top: 10px;
     }
 
     .board-container {
       display: flex;
       justify-content: center;
-      align-items: center;
-      margin-top: 20px;
     }
-
   </style>
 </head>
 <body>
@@ -99,17 +81,12 @@
       const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
       const [gameOver, setGameOver] = React.useState(false);
 
-      // Start the game
-      function startGame() {
+      // Start or restart the game
+      function startRestartGame() {
         setGame(initialGameState);
+        setSelectedSquare(null);
         setIsWhiteTurn(true);
         setGameOver(false);
-        setSelectedSquare(null);
-      }
-
-      // Restart the game
-      function restartGame() {
-        startGame(); // Use the startGame function to reset the game
       }
 
       // Handle square click for moving pieces
@@ -125,8 +102,8 @@
 
           // Ensure the player can only move their pieces
           if (selectedPiece && isPlayerPiece(selectedPiece, isWhiteTurn)) {
-            // Check if the move is valid for the selected piece
-            if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col)) {
+            // Move the piece if it's a valid move
+            if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
               const newGame = game.map(row => row.slice());
 
               // If the king is captured, end the game
@@ -135,12 +112,15 @@
                 alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
               }
 
-              newGame[row][col] = selectedPiece;
-              newGame[selectedRow][selectedCol] = '';
-
-              setGame(newGame);
-              setSelectedSquare(null);
-              setIsWhiteTurn(!isWhiteTurn);  // Alternate the turn after a move
+              if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col, newGame)) {
+                newGame[row][col] = selectedPiece;
+                newGame[selectedRow][selectedCol] = '';
+                setGame(newGame);
+                setSelectedSquare(null);
+                setIsWhiteTurn(!isWhiteTurn);  // Alternate the turn after a move
+              } else {
+                setSelectedSquare(null);
+              }
             } else {
               setSelectedSquare(null);
             }
@@ -160,36 +140,62 @@
         return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
       }
 
-      // Validate the move according to the piece type
-      function isValidMove(piece, startRow, startCol, targetRow, targetCol) {
+      // Check if a piece belongs to the opponent
+      function isOpponentPiece(piece, target) {
+        return (piece.toUpperCase() === piece && target.toLowerCase() === target) || 
+               (piece.toLowerCase() === piece && target.toUpperCase() === target);
+      }
+
+      // Validate the move based on the piece type
+      function isValidMove(piece, startRow, startCol, targetRow, targetCol, newGame) {
         const rowDiff = targetRow - startRow;
         const colDiff = targetCol - startCol;
 
         switch (piece.toLowerCase()) {
           case 'p':
-            // Pawns: can only move forward and capture diagonally
-            if (piece === 'P') {
-              return (colDiff === 0 && rowDiff === -1 && game[targetRow][targetCol] === '') || // Move forward
-                     (Math.abs(colDiff) === 1 && rowDiff === -1 && game[targetRow][targetCol] && game[targetRow][targetCol].toLowerCase() === 'p'); // Capture
-            } else {
-              return (colDiff === 0 && rowDiff === 1 && game[targetRow][targetCol] === '') || // Move forward
-                     (Math.abs(colDiff) === 1 && rowDiff === 1 && game[targetRow][targetCol] && game[targetRow][targetCol].toUpperCase() === 'P'); // Capture
+            // Pawn movement logic
+            const direction = isWhiteTurn ? -1 : 1;
+            const startRowForPawn = isWhiteTurn ? 6 : 1; // Start row for white and black
+            if (colDiff === 0 && rowDiff === direction && newGame[targetRow][targetCol] === '') {
+              return true; // Move forward
             }
+            if (colDiff === 0 && rowDiff === 2 * direction && startRow === startRowForPawn && newGame[targetRow][targetCol] === '' && newGame[startRow + direction][startCol] === '') {
+              return true; // Double move
+            }
+            if (Math.abs(colDiff) === 1 && rowDiff === direction && newGame[targetRow][targetCol] !== '') {
+              return true; // Capture
+            }
+            return false;
+
           case 'r':
-            // Rooks: can move horizontally or vertically
-            return (colDiff === 0 || rowDiff === 0) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
+            // Rook movement logic
+            if (colDiff === 0 || rowDiff === 0) {
+              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
+            }
+            return false;
+
           case 'n':
-            // Knights: can move in an L-shape
-            return (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1) || (Math.abs(colDiff) === 2 && Math.abs(rowDiff) === 1);
+            // Knight movement logic
+            return (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1) || (Math.abs(rowDiff) === 1 && Math.abs(colDiff) === 2);
+
           case 'b':
-            // Bishops: can move diagonally
-            return Math.abs(rowDiff) === Math.abs(colDiff) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
+            // Bishop movement logic
+            if (Math.abs(rowDiff) === Math.abs(colDiff)) {
+              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
+            }
+            return false;
+
           case 'q':
-            // Queens: can move like both a rook and a bishop
-            return ((colDiff === 0 || rowDiff === 0) || (Math.abs(rowDiff) === Math.abs(colDiff))) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
+            // Queen movement logic
+            if (Math.abs(rowDiff) === Math.abs(colDiff) || colDiff === 0 || rowDiff === 0) {
+              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
+            }
+            return false;
+
           case 'k':
-            // Kings: can move one square in any direction
+            // King movement logic
             return Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1;
+
           default:
             return false; // Invalid piece
         }
@@ -197,14 +203,15 @@
 
       // Check if the path is blocked for rooks, bishops, and queens
       function isPathBlocked(startRow, startCol, targetRow, targetCol) {
-        const rowStep = targetRow > startRow ? 1 : (targetRow < startRow ? -1 : 0);
-        const colStep = targetCol > startCol ? 1 : (targetCol < startCol ? -1 : 0);
+        const rowStep = targetRow > startRow ? 1 : targetRow < startRow ? -1 : 0;
+        const colStep = targetCol > startCol ? 1 : targetCol < startCol ? -1 : 0;
+
         let row = startRow + rowStep;
         let col = startCol + colStep;
 
         while (row !== targetRow || col !== targetCol) {
           if (game[row][col] !== '') {
-            return true; // Path is blocked by another piece
+            return true; // Path is blocked
           }
           row += rowStep;
           col += colStep;
@@ -214,11 +221,10 @@
 
       return (
         <div>
-          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
           <div className="button-container">
-            <button onClick={startGame}>Start Game</button>
-            <button onClick={restartGame} disabled={!gameOver}>Restart Game</button>
+            <button onClick={startRestartGame}>{gameOver ? "Start Game" : "Start/Restart Game"}</button>
           </div>
+          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
           <div className="board-container">
             <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
           </div>
